# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# JTD-codegen pipeline (extracted in #400) — xtask is a thin wrapper.
streamlib-jtd-codegen = { path = "../libs/streamlib-jtd-codegen" }

# Logging — needed to surface tracing::info! output from streamlib-jtd-codegen.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization for reading Cargo.toml and JTD schemas
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Recursive file walk for lint-logging
walkdir = "2.5"

# Rust AST parsing for lint-logging — matches clippy's disallowed_macros
# semantics (respects #[cfg(test)], #[allow(clippy::disallowed_macros)], and
# file-level #![allow(...)]) without having to compile the workspace.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3.15"

