# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "streamlib-adapter-abi"
description = "Public ABI for StreamLib surface adapters (in-tree and 3rd-party): SurfaceAdapter trait, StreamlibSurface descriptor, scoped acquire/release, capability marker traits, conformance suite."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
name = "streamlib_adapter_abi"
path = "src/lib.rs"

[dependencies]
bitflags.workspace = true
parking_lot = "0.12"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[lints]
workspace = true
