[package]
name = "api-server-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# `@tatolab/api-server` and `@tatolab/debug-utilities` load at runtime
# via `Runner::add_module` from the static registry — no compile-time link.
streamlib = { version = "0.4.33-dev.2", registry = "tatolab" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio-tungstenite = "0.26"  # Async WebSocket client for event verification
futures-util = "0.3"  # For StreamExt

# Standalone, registry-only example (headed to its own repo).
[workspace]
