[package]
name = "api-server-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# The SDK is resolved by version. It is not published to crates.io yet, so for
# local development `./setup.sh` runs `streamlib link --engine <checkout>` to
# point this dep at the in-repo SDK. Once the SDK publishes, the bare version
# resolves with no link step. The processor packages it uses
# (`@tatolab/api-server`, `@tatolab/debug-utilities`) are NOT Cargo deps — they
# live in this app's `streamlib_modules/` folder (run `./setup.sh` once). See
# README.md.
streamlib = { version = "0.6" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio-tungstenite = "0.26"  # Async WebSocket client for event verification
futures-util = "0.3"  # For StreamExt

# Standalone example (headed to its own repo). The empty `[workspace]` table
# makes this its own workspace root so it builds off-tree.
[workspace]
