[package]
name = "api-server-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# This demo does not run an in-process runtime: the api-server is the control
# plane, statically linked into `streamlib-runtime` and served in-process (not a
# loadable plugin), so it cannot be instantiated from the SDK. The demo spawns a
# real `streamlib-runtime` subprocess and drives it over HTTP + WebSocket, so it
# depends only on a client stack — no `streamlib` SDK dep. `./setup.sh` builds
# the runtime binary and links `@tatolab/debug-utilities` into this app's
# `streamlib_modules/` (the runtime resolves it there). See README.md.
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio-tungstenite = "0.26"  # Async WebSocket client for event verification
futures-util = "0.3"  # For StreamExt

# Standalone example (headed to its own repo). The empty `[workspace]` table
# makes this its own workspace root so it builds off-tree.
[workspace]
