[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

# `@tatolab/api-server` loaded at runtime via
# `Runner::load_workspace_packages` — no compile-time link.
[dependencies]
streamlib = { path = "../../libs/streamlib-sdk" }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
