[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

# `@tatolab/api-server` loaded at runtime via
# `Runner::add_module` — no compile-time link.
[dependencies]
streamlib = { path = "../../libs/streamlib-sdk", version = "0.4.30", registry = "gitea" }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
