# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone example (headed to its own repo). It is a dependency-free client
# for the runtime's HTTP control plane: the api-server is statically linked
# into `streamlib-runtime` and served in-process, so an app reaches it by
# running the runtime and hitting its endpoints, not by loading a module. The
# probe talks raw HTTP over `std::net`, so it needs no dependencies and no SDK
# link — `cargo build` works on its own. The empty `[workspace]` table makes
# this its own workspace root so it builds off-tree. See README.md.
[package]
name = "api-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[workspace]
