[package]
name = "audio-mixer-demo"
version = "0.1.0"
edition = "2024"

# Canonical reference for the All-Dynamic Package Loading milestone:
# the only streamlib-* Cargo dep is `streamlib` (the SDK). The
# `@tatolab/audio` package is loaded at runtime via
# `Runner::add_module_with` against the build orchestrator
# output — no compile-time link.
[dependencies]
streamlib = { version = "0.5", registry = "gitea" }
serde_json = "1"

# Standalone, registry-only example (headed to its own repo).
[workspace]
