[package]
name = "audio-mixer-demo"
version = "0.1.0"
edition = "2024"

# The only streamlib-* Cargo dep is `streamlib` (the SDK), resolved by version.
# The `@tatolab/audio` package is NOT a Cargo dep — it lives in this app's
# `streamlib_modules/` folder (run `./setup.sh` once) and the runtime lazily
# discovers + loads it at runtime. See README.md.
[dependencies]
# The SDK is resolved by version. `./setup.sh` runs
# `streamlib link --engine <checkout>` to point this dep at the in-repo SDK
# checkout (the static file tree / linked checkout is the package source; there
# is no central package registry). Reverse with `streamlib unlink --engine`.
streamlib = { version = "0.8.0" }
serde_json = "1"

# Standalone example (headed to its own repo). The empty `[workspace]` table
# makes this its own workspace root so it builds off-tree.
[workspace]
