[package]
name = "camera-audio-recorder"
version = "0.1.0"
edition = "2024"

[build-dependencies]
streamlib-jtd-codegen = { path = "../../libs/streamlib-jtd-codegen", version = "0.4.30", registry = "gitea" }

[dependencies]
streamlib = { path = "../../libs/streamlib-sdk", version = "0.4.30", registry = "gitea" }
streamlib-audio = { path = "../../packages/audio", version = "0.4.30", registry = "gitea" }
streamlib-camera = { path = "../../packages/camera", version = "0.4.30", registry = "gitea" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
