# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). The SDK resolves
# from the Gitea registry by version and the empty `[workspace]` table makes
# this its own workspace root.
#
# DEFERRED, not in scope: this example is a no-op at HEAD. Its
# `Camera + AudioCapture → Mp4Writer` recorder is macOS/iOS-only — the Linux
# MP4 writer does not yet accept an audio input, so there is no Linux path —
# and the pipeline still uses the deprecated compile-time typed-struct API.
# The real pipeline lives in git history; see `src/main.rs` for the deferral
# note and the path back.
[package]
name = "camera-audio-recorder"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.5", registry = "tatolab" }

[workspace]
