# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "camera-deno-subprocess"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
streamlib = { path = "../../libs/streamlib" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
