[package]
name = "camera-display"
version = "0.1.0"
edition = "2021"

[dependencies]
streamlib = { path = "../../libs/streamlib" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"
serde_json = "1.0"
