# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). Every dependency
# resolves from the static registry by version, and the empty `[workspace]` table
# makes this its own workspace root so it builds off-tree. Loads
# `@tatolab/camera` + `@tatolab/display` + `@tatolab/api-server` at runtime via
# `Strategy::Registry`.
[package]
name = "camera-display"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan"]

[dependencies]
streamlib = { version = "0.5", registry = "tatolab" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
serde_json = "1.0"

[workspace]
