# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "camera-dylib-display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan", "streamlib-python/backend-vulkan"]

[dependencies]
streamlib = { path = "../../libs/streamlib" }
streamlib-python = { path = "../../libs/streamlib-python" }
streamlib-plugin-abi = { path = "../../libs/streamlib-plugin-abi" }
libloading = "0.8"
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Build dependency to ensure plugin is built before the example
[build-dependencies]
