# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone example (headed to its own repo). This crate is its own workspace
# root and includes the sibling `plugin/` cdylib (the engine-free grayscale
# compute plugin) as a member. The SDK resolves by version; the processor
# packages (`@tatolab/camera`, `@tatolab/display`, and the example-local
# `./plugin`) are linked into this app's `streamlib_modules/` by `./setup.sh`
# and lazily discovered by the runtime. See README.md.
[package]
name = "camera-plugin-sdk-compute"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"
publish = false

[dependencies]
streamlib = { workspace = true }
serde_json = { workspace = true }

[workspace]
members = ["plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"

[workspace.dependencies]
# Engine facade — used ONLY by the runner (the host app), never the plugin.
streamlib = { version = "0.7.13" }
# Engine-free authoring SDK chain — used by the plugin cdylib.
streamlib-plugin-sdk = { version = "0.7.13" }
streamlib-macros = { version = "0.7.13" }
streamlib-plugin-abi = { version = "0.7.13" }
streamlib-jtd-codegen = { version = "0.7.13" }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
