# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "camera-python-display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan"]

[dependencies]
streamlib = { path = "../../libs/streamlib-sdk" }
tracing = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
streamlib-adapter-abi = { path = "../../libs/streamlib-adapter-abi" }
# `VulkanLayout` newtype used by `register_render_target_surface` when
# dual-registering the Skia / OpenGL DMA-BUF outputs in
# `texture_cache`. The runner never imports `vulkanalia` directly; the
# `BlendingCompositor` / `CrtFilmGrain` graphics-kernel wrappers
# (which DO ride `vulkanalia` as a transitional exception) live in the
# sibling `effects/` package and load via `runtime.add_module_with`.
streamlib-consumer-rhi = { path = "../../libs/streamlib-consumer-rhi" }
