# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). Every dependency
# resolves from the static registry by version. This crate is its own workspace
# root and includes the sibling `effects/` cdylib plugin as a member so the
# runner can `cargo build -p camera-python-display-effects` and stage it.
[package]
name = "camera-python-display"
version = "0.4.33-dev.2"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"
publish = false

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan"]

[dependencies]
streamlib = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
streamlib-adapter-abi = { workspace = true }
streamlib-consumer-rhi = { workspace = true }

[workspace]
members = ["effects"]

[workspace.package]
version = "0.4.33-dev.2"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"

[workspace.dependencies]
streamlib = { version = "0.5" }
streamlib-jtd-codegen = { version = "0.5" }
streamlib-plugin-abi = { version = "0.5" }
streamlib-adapter-abi = { version = "0.5" }
streamlib-consumer-rhi = { version = "0.5" }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
