# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone example (headed to its own repo). This crate is its own workspace
# root and includes the sibling `effects/` cdylib package as a member. The SDK
# resolves by version; the processor packages (`@tatolab/camera`,
# `@tatolab/display`, the example-local `./effects` and `./python`) are linked
# into this app's `streamlib_modules/` by `./setup.sh` and lazily discovered by
# the runtime. See README.md.
[package]
name = "camera-python-display"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"
publish = false

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan"]

[dependencies]
streamlib = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
streamlib-adapter-abi = { workspace = true }
streamlib-consumer-rhi = { workspace = true }

[workspace]
members = ["effects"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Fontanez <fontanezj1@gmail.com>"]
license = "BUSL-1.1"

[workspace.dependencies]
# Engine facade — used ONLY by the runner (the host app), never the `effects`
# plugin cdylib.
streamlib = { version = "0.7.37" }
# Engine-free authoring SDK chain — used by the `effects` plugin cdylib.
streamlib-plugin-sdk = { version = "0.7.37" }
streamlib-macros = { version = "0.7.37" }
streamlib-jtd-codegen = { version = "0.7.37" }
streamlib-plugin-abi = { version = "0.7.37" }
streamlib-adapter-abi = { version = "0.7.37" }
streamlib-consumer-rhi = { version = "0.7.37" }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
