# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo / hand-off use):
# every dependency resolves from the Gitea registry by version, and the empty
# `[workspace]` table makes this its own workspace root so it builds off-tree.
# Loads `@tatolab/camera` + `@tatolab/display` at runtime via
# `Strategy::Registry`; its sibling `python/` package loads via `Strategy::Path`.
[package]
name = "camera-python-subprocess"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.1", registry = "gitea" }
serde_json = "1.0"

[workspace]
