# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "cuda-fisheye-detection-scenario"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.5", registry = "tatolab" }
streamlib-adapter-abi = { version = "0.4.33-dev.5", registry = "tatolab" }
streamlib-adapter-cuda = { version = "0.4.33-dev.5", registry = "tatolab" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0"

[workspace]
