# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "cuda-fisheye-detection-scenario"
version = "0.1.0"
edition = "2024"
publish = false

# The `streamlib*` SDK crates resolve by version. They aren't published to
# crates.io yet, so `./setup.sh` runs `streamlib link --engine <checkout>` to
# point them at the in-repo SDK for local development.
[dependencies]
streamlib = { version = "0.7.14" }
streamlib-adapter-abi = { version = "0.7.14" }
streamlib-adapter-cuda = { version = "0.7.14" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0"

[workspace]
