[package]
name = "iceoryx2-producer-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
streamlib = { path = "../../libs/streamlib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
serde_bytes = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
