# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). Every dependency
# resolves from the static registry by version, and the empty `[workspace]` table
# makes this its own workspace root so it builds off-tree. Loads
# `@tatolab/debug-utilities` + `@tatolab/jpeg` + `@tatolab/display` at runtime
# via `Strategy::Registry`.
[package]
name = "jpeg-psnr"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.5", registry = "tatolab" }
serde_json = "1"
anyhow = "1.0.100"

[workspace]
