# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone example (headed to its own repo). The `streamlib` SDK resolves by
# version, and the empty `[workspace]` table makes this its own workspace root so
# it builds off-tree. The processor packages it uses (`@tatolab/debug-utilities`,
# `@tatolab/jpeg`, `@tatolab/display`) are NOT Cargo deps — they live in this
# app's `streamlib_modules/` folder (run `./setup.sh` once) and the runtime
# lazily discovers + loads them at runtime. See README.md.
[package]
name = "jpeg-psnr"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# The SDK is resolved by version. It is not published to crates.io yet, so for
# local development `./setup.sh` runs `streamlib link --engine <checkout>` to
# point this dep at the in-repo SDK. Once the SDK publishes, the bare version
# resolves with no link step.
streamlib = { version = "0.7.25" }
serde_json = "1"
anyhow = "1.0.100"

[workspace]
