[package]
name = "microphone-reverb-speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
streamlib = { path = "../../libs/streamlib-sdk", version = "0.4.30", registry = "gitea" }
streamlib-audio = { path = "../../packages/audio", version = "0.4.30", registry = "gitea" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
streamlib-clap = { path = "../../packages/clap", version = "0.4.30", registry = "gitea" }
