# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). The SDK resolves
# from the static registry by version and the empty `[workspace]` table makes
# this its own workspace root.
#
# DEFERRED, not in scope: this example is a no-op at HEAD. Its CLAP reverb
# pipeline (`AudioCapture → ClapEffect → AudioOutput`) is macOS/iOS-only and
# cannot yet be a standalone registry-only example — `@tatolab/clap` is not
# published to the registry and CLAP plugin discovery still needs a runtime
# `add_module` story. The real pipeline lives in git history; see
# `src/main.rs` for the full deferral note and the path back.
[package]
name = "microphone-reverb-speaker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.5", registry = "tatolab" }

[workspace]
