# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone example (headed to its own repo). The `streamlib` SDK resolves by
# version and the empty `[workspace]` table makes this its own workspace root so
# it builds off-tree.
#
# DEFERRED, not in scope: this example is a no-op at HEAD. Its CLAP reverb
# pipeline (`AudioCapture → ClapEffect → AudioOutput`) is macOS/iOS-only and
# cannot yet be a standalone example — `@tatolab/clap` is not distributable as a
# package and CLAP plugin discovery still needs a runtime graph-API story. The
# real pipeline lives in git history; see `src/main.rs` for the full deferral
# note and the path back. It loads no processor packages today, so `./setup.sh`
# only links the SDK.
[package]
name = "microphone-reverb-speaker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# The SDK is resolved by version. It is not published to crates.io yet, so for
# local development `./setup.sh` runs `streamlib link --engine <checkout>` to
# point this dep at the in-repo SDK. Once the SDK publishes, the bare version
# resolves with no link step.
streamlib = { version = "0.7.9" }

[workspace]
