[package]
name = "moq-av-publish"
version = "0.1.0"
edition = "2021"

[dependencies]
streamlib = { path = "../../libs/streamlib", features = ["moq", "vulkan-video"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3"
rustls = { version = "0.23", features = ["ring"] }
