[package]
name = "moq-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moq-data"
path = "src/main.rs"

[dependencies]
streamlib = { path = "../../libs/streamlib", features = ["moq"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
rustls = { version = "0.23", features = ["ring"] }
