[package]
name = "moq-link-transport"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend-vulkan = ["streamlib/backend-vulkan"]

[dependencies]
streamlib = { path = "../../libs/streamlib", features = ["moq"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
rustls = { version = "0.23", features = ["ring"] }
