[package]
name = "moq-roundtrip"
version = "0.1.0"
edition = "2021"

[dependencies]
streamlib = { path = "../../libs/streamlib", features = ["moq"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
