[package]
name = "moq-roundtrip"
version = "0.1.0"
edition = "2024"

[dependencies]
streamlib = { path = "../../libs/streamlib-sdk", features = ["moq", "vulkan-video", "ffmpeg"] }
streamlib-audio = { path = "../../packages/audio" }
streamlib-camera = { path = "../../packages/camera" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
rustls = { version = "0.23", features = ["ring"] }
