# Copyright (c) 2025 Jonathan Fontanez
# SPDX-License-Identifier: BUSL-1.1

# Standalone, registry-only example (headed to its own repo). Every dependency
# resolves from the static registry by version, and the empty `[workspace]` table
# makes this its own workspace root so it builds off-tree. Loads
# `@tatolab/{audio,camera,display,h264,moq,opus}` at runtime via
# `Strategy::Registry`.
[package]
name = "moq-roundtrip"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
streamlib = { version = "0.4.33-dev.5", registry = "tatolab" }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
rustls = { version = "0.23", features = ["ring"] }

[workspace]
