[workspace]
# Empty workspace declaration makes this a standalone package

[package]
name = "news-cast"
version = "0.1.0"
edition = "2021"

[dependencies]
# StreamLib platform-agnostic facade
streamlib = { path = "../../libs/streamlib" }

# GPU-native 2D rendering with vello
vello = "0.5.0"

# WebGPU - match vello 0.5.0's version (25.0.2)
# Explicitly match vello's wgpu version to avoid conflicts
wgpu = "=25.0.2"
bytemuck = "1.24.0"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# Utilities
pollster = "0.3"
