[workspace]
# Empty workspace declaration makes this a standalone package

[package]
name = "news-cast"
version = "0.1.0"
edition = "2021"

[dependencies]
# StreamLib platform-agnostic facade (with debug overlay enabled)
streamlib = { path = "../../libs/streamlib", features = ["debug-overlay"] }

# GPU-native 2D rendering with vello
# Using specific commit with wgpu 25.0.2 support (commit verified via GitHub blame)
vello = { git = "https://github.com/linebender/vello", rev = "5e3e12559781891b204553161aee761900c7e92d" }

# WebGPU - match vello's wgpu version (25.0.2)
# Explicitly match vello's wgpu version to avoid conflicts
wgpu = "=25.0.2"
bytemuck = "1.24.0"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# Utilities
pollster = "0.3"
